// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tauri command registration contract > parsed backend handlers snapshot (informational) 1`] = `
[
  "assign_capture_to_bug",
  "close_session_status_window",
  "copy_bug_to_clipboard",
  "create_swarm_ticket",
  "delete_setting",
  "disable_startup",
  "emit_screenshot_captured",
  "enable_startup",
  "end_bug_capture",
  "end_session",
  "format_session_export",
  "generate_bug_description",
  "generate_session_summary",
  "get_active_bug_id",
  "get_active_profile_id",
  "get_active_session",
  "get_active_session_id",
  "get_all_settings",
  "get_app_version",
  "get_bug",
  "get_bug_captures",
  "get_bug_notes",
  "get_bugs_by_session",
  "get_capture_folder_path",
  "get_claude_status",
  "get_hotkey_config",
  "get_linear_profile_defaults",
  "get_session_notes",
  "get_session_summaries",
  "get_setting",
  "get_template_path",
  "get_template_source",
  "get_unsorted_captures",
  "greet",
  "has_completed_setup",
  "is_hotkey_registered",
  "list_sessions",
  "mark_setup_complete",
  "open_annotation_window",
  "open_bug_folder",
  "open_session_folder",
  "open_session_notes_window",
  "open_session_status_window",
  "open_template_in_editor",
  "parse_console_screenshot",
  "profile_create",
  "profile_delete",
  "profile_get",
  "profile_list",
  "profile_update",
  "refine_bug_description",
  "refresh_claude_status",
  "reload_template",
  "render_bug_template",
  "reset_setup",
  "reset_template_to_default",
  "resume_bug_capture",
  "resume_session",
  "save_annotated_image",
  "save_bug_description",
  "save_custom_template",
  "set_active_profile_id",
  "set_custom_template_path",
  "set_setting",
  "start_bug_capture",
  "start_session",
  "suggest_capture_assignment",
  "ticketing_authenticate",
  "ticketing_check_connection",
  "ticketing_create_ticket",
  "ticketing_get_credentials",
  "ticketing_save_credentials",
  "trigger_screenshot",
  "update_bug_console_parse",
  "update_bug_description",
  "update_bug_metadata",
  "update_bug_notes",
  "update_bug_type",
  "update_capture_console_flag",
  "update_hotkey_config",
  "update_session_notes",
  "update_session_status",
  "update_tray_icon",
  "update_tray_menu",
  "update_tray_tooltip",
]
`;

exports[`Tauri command registration contract > parsed frontend commands snapshot (informational) 1`] = `
[
  "assign_capture_to_bug",
  "close_session_status_window",
  "copy_bug_to_clipboard",
  "create_swarm_ticket",
  "delete_setting",
  "end_bug_capture",
  "format_session_export",
  "generate_bug_description",
  "generate_session_summary",
  "get_active_profile_id",
  "get_active_session",
  "get_all_settings",
  "get_bug",
  "get_bug_captures",
  "get_bug_notes",
  "get_bugs_by_session",
  "get_capture_folder_path",
  "get_claude_status",
  "get_linear_profile_defaults",
  "get_session_notes",
  "get_session_summaries",
  "get_setting",
  "get_unsorted_captures",
  "greet",
  "has_completed_setup",
  "list_sessions",
  "mark_setup_complete",
  "open_annotation_window",
  "open_bug_folder",
  "open_session_folder",
  "open_session_notes_window",
  "open_session_status_window",
  "parse_console_screenshot",
  "profile_create",
  "profile_delete",
  "profile_get",
  "profile_list",
  "profile_update",
  "refine_bug_description",
  "refresh_claude_status",
  "reload_template",
  "render_bug_template",
  "reset_setup",
  "resume_bug_capture",
  "resume_session",
  "save_annotated_image",
  "save_bug_description",
  "set_active_profile_id",
  "set_custom_template_path",
  "set_setting",
  "start_bug_capture",
  "start_session",
  "suggest_capture_assignment",
  "ticketing_authenticate",
  "ticketing_check_connection",
  "ticketing_create_ticket",
  "ticketing_get_credentials",
  "ticketing_save_credentials",
  "trigger_screenshot",
  "update_bug_console_parse",
  "update_bug_description",
  "update_bug_metadata",
  "update_bug_notes",
  "update_bug_type",
  "update_capture_console_flag",
  "update_session_notes",
  "update_session_status",
  "update_tray_icon",
  "update_tray_menu",
  "update_tray_tooltip",
]
`;
